--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "start": " node script",
-    "dev" : "nodemon srcipt"
+    "dev": "nodemon srcipt"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
     "eslint": "^6.8.0",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "puppeteer": "^8.0.0"
   },
