--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "Discord_Bot_js_ZDBOT",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,15 +18,6 @@
   },
   "homepage": "https://github.com/KPEKZ/Discord_Bot_js_ZDBOT#readme",
   "dependencies": {
-    "@discordjs/opus": "^0.1.0",
-    "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^11.5.1",
-    "eslint": "^6.8.0",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
-    "puppeteer": "^8.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "discord.js": "^12.5.1"
   }
 }
